fixed alignment of player name on game screen

--- a/game/controller.css
+++ b/game/controller.css
@@ -43,6 +43,7 @@ text white: white;
     right: 0.5em;
 }
 
+
 #small-hero-image{
 	bottom: 1em;
     position: absolute;
@@ -236,7 +237,7 @@ body{
 
 .round-change-button.round-change-button{
 	display: none;
-	height: 29.333333vh;
+	width: 40vw;
 }
 
 .round-change-button .icon-container{
